--- a/gcc-testing/test_0D_headers/Makefile
+++ b/gcc-testing/test_0D_headers/Makefile
@@ -1,10 +1,15 @@
 GCC=g++-11 -std=c++20 -fmodules-ts
 
+all: std_headers usr_headers main
+
+test: all
+	./main
+
 std_headers:
 	$(GCC) -xc++-system-header iostream
 
-some_header: some_header.hpp
-	$(GCC) -xc++-system-header -I. some_header.hpp
+usr_headers: iostream
+	$(GCC) -xc++-user-header -I. iostream
 
 main: main.cpp
 	$(GCC) $^ -o $@
