Working example with module mapping file

--- a/gcc-testing/test_1E_module_mapping_file/Makefile
+++ b/gcc-testing/test_1E_module_mapping_file/Makefile
@@ -1,13 +1,14 @@
 MAKEFLAGS += --no-print-directory
 
-all: mylib myexe
+all: mylib/mylib.o myexe/myexe.o
 
-mylib:
+mylib/mylib.o:
 	@cd mylib && make
 
-myexe:
+myexe/myexe.o:
 	@cd myexe && make
 
 clean:
 	@cd mylib && make clean
 	@cd myexe && make clean
+	@rm -rf gcm.cache
