--- a/gcc-testing/test_1E_module_mapping_file/myexe/Makefile
+++ b/gcc-testing/test_1E_module_mapping_file/myexe/Makefile
@@ -1,14 +1,14 @@
 MODMAP=-fmodule-mapper=module_mapper.txt
-GCC=g++-11 -std=c++20 -fmodules-ts -fno-module-lazy
+GCC=g++-11 -std=c++20 -fmodules-ts
 
 all: std_headers myexe
 
 std_headers:
-	$(GCC) -xc++-system-header iostream
+	cd .. && $(GCC) -xc++-system-header iostream
 
 myexe: myexe.cpp
 	$(GCC) $(MODMAP) $< ../mylib/*.o -o $@
 
 clean:
 	@rm -f *.o
-	@rm -rf gcm.cache/
+	@rm -f myexe
