--- a/gcc-testing/test_1E_module_mapping_file/mylib/Makefile
+++ b/gcc-testing/test_1E_module_mapping_file/mylib/Makefile
@@ -1,10 +1,9 @@
-GCC=g++-11 -std=c++20 -fmodules-ts -fmodule-mapper=module_mapper.txt
-
+GCC=g++-11 -std=c++20 -fmodules-ts
+MODMAP= -fmodule-mapper=module_mapper.txt
 all: mylib.o
 
 mylib.o : mylib.cpp
-	$(GCC) -c $< -o $@
+	$(GCC) $(MODMAP) -c $< -o $@
 
 clean:
 	@rm -f *.o
-	@rm -rf gcm.cache/
