Mapping file with module partition

--- a/gcc-testing/test_1E_module_mapping_file/mylib/Makefile
+++ b/gcc-testing/test_1E_module_mapping_file/mylib/Makefile
@@ -2,7 +2,10 @@ GCC=g++-11 -std=c++20 -fmodules-ts
 MODMAP= -fmodule-mapper=module_mapper.txt
 all: mylib.o
 
-mylib.o : mylib.cpp
+mylib-part.o : mylib-part.cpp
+	$(GCC) $(MODMAP) -c $< -o $@
+
+mylib.o : mylib.cpp mylib-part.o
 	$(GCC) $(MODMAP) -c $< -o $@
 
 clean:
